fix scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,11 +48,7 @@ body{
 
 /* if dark mode make scrollbar dark */
 @media (prefers-color-scheme: dark) {
-    ::-webkit-scrollbar {
-        @apply bg-black;
-    }
-    ::-webkit-scrollbar-thumb {
-        @apply bg-gray-500;
-        border-radius: 10px;
+    :root{
+        color-scheme: dark;
     }
 }
